# edc-rs

./: Cargo.toml
.github/workflows/: release-docker.yml
edc-connector-client/: CHANGELOG.md  Cargo.toml
edc-connector-client/examples/: get_asset.rs
edc-connector-client/src/: api.rs  client.rs  lib.rs  types.rs
edc-connector-client/src/api/: assets.rs  catalog.rs  contract_agreement.rs  contract_definitions.rs  contract_negotiations.rs  dataplanes.rs  edrs.rs  policies.rs  secrets.rs  transfer_process.rs
edc-connector-client/src/types/: asset.rs  callback_address.rs  catalog.rs  context.rs  contract_definition.rs  contract_negotiation.rs  dataplane.rs  policy.rs  properties.rs  secret.rs  transfer_process.rs
edc-connector-client/src/types/catalog/: common_properties.rs  creator.rs  dataset.rs  dataset_or_catalog.rs  dataset_or_service.rs  service.rs  thumbnail.rs
edc-connector-client/src/types/properties/: conversion.rs
edc-connector-client/tests/: asset-tests.rs  catalog-tests.rs  contract-definition-tests.rs  contract-negotiation-tests.rs  dataplane-tests.rs  policy-tests.rs  secret-tests.rs  transfer-process-tests.rs
edc-connector-client/tests/common/: mod.rs
testing/: docker-compose.yml
testing/conf/consumer-connector.config/: configuration.properties
testing/conf/provider-connector.config/: configuration.properties
testing/connector/: build.gradle.kts
testing/connector/gradle/: libs.versions.toml
