[workspace]
resolver="2"
members = [
    "edc-connector-client"
]

[workspace.dependencies]
thiserror = "2.0"
tracing = "0.1.43"
serde = { version = "1", features= ["derive"] }
serde_json = "1"
serde_with = "3.16.1"
tokio = "1"
uuid = { version ="1", features = ["v4"] }
bon = "3.8.1"

[workspace.lints.clippy]
unwrap_used = "deny"
